--- a/l3kernel/l3prop.dtx
+++ b/l3kernel/l3prop.dtx
@@ -216,6 +216,14 @@
 %   \end{texnote}
 % \end{function}
 %
+% \begin{function}[EXP]{\prop_count:N, \prop_count:c}
+%   \begin{syntax}
+%     \cs{prop_count:N} \meta{property list}
+%   \end{syntax}
+%   Leaves the number of key--value pairs in the \meta{property list} in
+%   the input stream as an \meta{integer denotation}.
+% \end{function}
+%
 % \section{Modifying property lists}
 %
 % \begin{function}[added = 2012-05-12]
@@ -868,6 +876,27 @@
       { \@@_item_Nn:nwwn {#1} }
   }
 \cs_generate_variant:Nn \prop_item:Nn { c }
+%    \end{macrocode}
+% \end{macro}
+% \end{macro}
+%
+% \begin{macro}[EXP]{\prop_count:N, \prop_count:c}
+% \begin{macro}[EXP]{\@@_count:nn}
+%   Counting the key--value pairs in a property list is done using the
+%   same approach as for other count functions: turn each entry into a
+%   \texttt{+1} then use integer evaluation to actually do the
+%   mathematics.
+%    \begin{macrocode}
+\cs_new:Npn \prop_count:N #1
+  {
+    \int_eval:n
+      {
+        0
+        \prop_map_function:NN #1 \@@_count:nn
+      }
+  }
+\cs_new:Npn \@@_count:nn #1#2 { + 1 }
+\cs_generate_variant:Nn \prop_count:N { c }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
