--- a/l3packages/xparse/xparse.dtx
+++ b/l3packages/xparse/xparse.dtx
@@ -944,8 +944,16 @@
 %   Generating environments uses the same mechanism as generating functions.
 %   However, full processing of arguments is always needed for environments,
 %   and so the function-generating code needs to know this.
+%   This variable is also used at run time to give correct error messages.
 %    \begin{macrocode}
 \bool_new:N \l_@@_environment_bool
+%    \end{macrocode}
+% \end{variable}
+%
+% \begin{variable}{\l_@@_environment_str}
+%   Name of the environment, used at definition time and at run time.
+%    \begin{macrocode}
+\str_new:N \l_@@_environment_str
 %    \end{macrocode}
 % \end{variable}
 %
@@ -1205,10 +1213,16 @@
       \cs_set_protected:Npn \l_@@_current_arg_int {#3}
     \cs_set_protected_nopar:Npx #1
       {
-        \@@_start:nNNnnn
-          { \exp_not:n {#2} }
-          \exp_not:c { \l_@@_function_tl \c_space_tl }
-          \exp_not:c { \l_@@_function_tl \c_space_tl code }
+        \bool_if:NTF \l_@@_environment_bool
+          {
+            \@@_start_env:nnnnn { \exp_not:n {#2} }
+              { \l_@@_environment_str }
+          }
+          {
+            \@@_start:nNNnnn { \exp_not:n {#2} }
+              \exp_not:c { \l_@@_function_tl \c_space_tl }
+              \exp_not:c { \l_@@_function_tl \c_space_tl code }
+          }
           { \exp_not:o \l_@@_signature_tl }
           {
             \bool_if:NT \l_@@_defaults_bool
@@ -1309,6 +1323,7 @@
       }
     \bool_set_false:N \l_@@_expandable_bool
     \bool_set_true:N \l_@@_environment_bool
+    \str_set:Nx \l_@@_environment_str {#1}
     \@@_declare_env_internal:nnnn {#1} {#2}
   }
 %    \end{macrocode}
@@ -1347,31 +1362,51 @@
 %
 % \subsection{Structure of \pkg{xparse} commands}
 %
-% \begin{macro}{\@@_start:nNNnnn}
-% \begin{macro}{\@@_start_aux:nNNnnn}
+% \begin{macro}{\@@_start_env:nnnnn, \@@_start:nNNnnn}
+%   For error messages that occur during run-time when getting arguments
+%   of environments it is necessary to keep track of the environment
+%   name.  We begin non-expandable commands with a token equal to
+%   \cs{scan_stop:}, whose name gives a reasonable error message if the
+%   command is used inside a csname and protects against
+%   \texttt{f}-expansion.  This is useless for environments since
+%   \cs{begin} is already not expandable.
+%    \begin{macrocode}
+\cs_new_protected:Npn \@@_start_env:nnnnn #1#2
+  {
+    \str_set:Nn \l_@@_environment_str {#2}
+    \bool_set_true:N \l_@@_environment_bool
+    \@@_start_aux:ccnnnn
+      { environment~ \l_@@_environment_str \c_space_tl }
+      { environment~ \l_@@_environment_str \c_space_tl code }
+      {#1}
+  }
+\cs_new_protected:Npx \@@_start:nNNnnn #1#2#3
+  {
+    \exp_not:c { xparse~function~is~not~expandable }
+    \exp_not:n { \bool_set_false:N \l_@@_environment_bool }
+    \exp_not:N \@@_start_aux:NNnnnn
+    #2 #3 {#1}
+  }
+%    \end{macrocode}
+% \end{macro}
+%
+% \begin{macro}{\@@_start_aux:NNnnnn, \@@_start_aux:ccnnnn}
 %   This sets up a few variables to minimize the boilerplate code
 %   included in all \pkg{xparse}-defined commands.  It then runs the
 %   grabbers~|#4|.  Again, the argument specification |#1| is only for
-%   diagnostics.  The control sequence equal to \cs{scan_stop:} protects
-%   against \texttt{f}-expansion and ensures errors are more reasonable
-%   when an \pkg{xparse} command is placed in a csname.
+%   diagnostics.
 %    \begin{macrocode}
-\cs_new_protected:Npx \@@_start:nNNnnn
-  {
-    \exp_not:c { xparse~function~is~not~expandable }
-    \exp_not:N \@@_start_aux:nNNnnn
-  }
-\cs_new_protected:Npn \@@_start_aux:nNNnnn #1#2#3#4#5#6
+\cs_new_protected:Npn \@@_start_aux:NNnnnn #1#2#3#4#5#6
   {
     \tl_clear:N \l_@@_args_tl
-    \tl_set:Nn \l_@@_fn_tl {#2}
-    \tl_set:Nn \l_@@_fn_code_tl {#3}
+    \tl_set:Nn \l_@@_fn_tl {#1}
+    \tl_set:Nn \l_@@_fn_code_tl {#2}
     \tl_set:Nn \l_@@_defaults_tl {#5}
     \tl_set:Nn \l_@@_process_all_tl {#6}
     #4 \@@_run_code:
   }
+\cs_generate_variant:Nn \@@_start_aux:NNnnnn { cc }
 %    \end{macrocode}
-% \end{macro}
 % \end{macro}
 %
 % \begin{macro}{\@@_run_code:}
@@ -4209,7 +4244,7 @@
 %   that its |arg_spec| is empty (this also excludes non-macros) and
 %   that its |replacement_spec| starts with either \cs{@@_start:nNNnnn}
 %   (non-expandable command) or \cs{@@_start_expandable:nNNNNn}
-%   (expandable command).
+%   (expandable command) or \cs{@@_start_env:nnnnn} (environment).
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_cmd_if_xparse:NTF #1
   {
@@ -4224,6 +4259,7 @@
       {
         { \token_to_str:N \@@_start:nNNnnn } { }
         { \token_to_str:N \@@_start_expandable:nNNNNn } { }
+        { \token_to_str:N \@@_start_env:nnnnn } { }
       }
   }
 \cs_new:Npn \@@_cmd_if_xparse_aux:w #1 ~ #2 \q_stop {#1}
