Improve xparse messages, especially for environments

--- a/l3packages/xparse/xparse.dtx
+++ b/l3packages/xparse/xparse.dtx
@@ -1164,13 +1164,16 @@
     \@@_declare_cmd_internal:Nnn #1 {#2}
   }
 %    \end{macrocode}
+%   At definition time, the variable \cs{l_@@_fn_tl} is only used for error messages.
 %   The real business of defining a document command starts with setting up
 %   the appropriate name, then normalizing the argument specification to get rid of
-%   shorthands (this step also counts the number of mandatory arguments).
+%   shorthands.
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_declare_cmd_internal:Nnn #1#2#3
   {
     \tl_set:Nx \l_@@_function_tl { \cs_to_str:N #1 }
+    \tl_set:Nx \l_@@_fn_tl
+      { \exp_not:c { \l_@@_function_tl \c_space_tl } }
     \@@_normalize_arg_spec:n {#2}
     \exp_args:No \@@_prepare_signature:n \l_@@_arg_spec_tl
     \@@_declare_cmd_code:Nnn #1 {#2} {#3}
@@ -1456,7 +1459,7 @@
 \cs_new_protected:Npn \@@_defaults_error:w \q_recursion_stop
   {
     \__kernel_msg_error:nnx { xparse } { loop-in-defaults }
-      { \exp_after:wN \token_to_str:N \l_@@_fn_tl }
+      { \@@_environment_or_command: }
   }
 %    \end{macrocode}
 %   To construct \cs{@@_tmp:w}, first go through the arguments
@@ -1572,8 +1575,9 @@
     \@@_end_expandable_defaults:nnnNNn {#1} { } {#1} #2#3
       { } { } { } { } { } { } { } { } { } { }
       {
-        \__kernel_msg_expandable_error:nnn
-          { xparse } { loop-in-defaults } {#4}
+        \__kernel_msg_expandable_error:nnf
+          { xparse } { loop-in-defaults }
+          { \exp_args:Nf \tl_trim_spaces:n { \token_to_str:N #4 } }
         \use_iv:nnnn
       }
     \q_stop
@@ -1671,7 +1675,7 @@
     \int_compare:nNnT \l_@@_current_arg_int > 9
       {
         \__kernel_msg_error:nnxx { xparse } { too-many-arguments }
-          { \iow_char:N \\ \l_@@_function_tl } { \tl_to_str:n {#1} }
+          { \@@_environment_or_command: } { \tl_to_str:n {#1} }
         \@@_bad_def:wn
       }
     \bool_if:NT \l_@@_expandable_bool
@@ -1695,7 +1699,7 @@
     \cs_if_exist_use:cF { @@_normalize_type_ \tl_to_str:n {#1} :w }
       {
         \__kernel_msg_error:nnxx { xparse } { unknown-argument-type }
-          { \iow_char:N \\ \l_@@_function_tl } { \tl_to_str:n {#1} }
+          { \@@_environment_or_command: } { \tl_to_str:n {#1} }
         \@@_bad_def:wn
       }
   }
@@ -1783,7 +1787,7 @@
     \bool_if:NT \l_@@_long_bool
       {
         \__kernel_msg_error:nnxx { xparse } { two-markers }
-          { \iow_char:N \\ \l_@@_function_tl } { + }
+          { \@@_environment_or_command: } { + }
         \@@_bad_def:wn
       }
     \bool_set_true:N \l_@@_long_bool
@@ -1796,7 +1800,7 @@
     \bool_if:NT \l_@@_obey_spaces_bool
       {
         \__kernel_msg_error:nnxx { xparse } { two-markers }
-          { \iow_char:N \\ \l_@@_function_tl } { ! }
+          { \@@_environment_or_command: } { ! }
         \@@_bad_def:wn
       }
     \bool_set_true:N \l_@@_obey_spaces_bool
@@ -1952,16 +1956,16 @@
       {
         \__kernel_msg_error:nnxx
           { xparse } { invalid-command-arg }
-          { \iow_char:N \\ \l_@@_function_tl } { b }
+          { \@@_environment_or_command: } { b }
         \@@_bad_def:wn
       }
     \quark_if_recursion_tail_stop_do:nn {#1} { \@@_bad_arg_spec:wn }
     \tl_clear:N \l_@@_last_delimiters_tl
     \@@_add_arg_spec:n { b {#1} }
     \quark_if_recursion_tail_stop:n {#2}
-    \__kernel_msg_error:nnxx
-      { xparse } { arg-after-body }
-      { \l_@@_function_tl } { \tl_to_str:n {#2} }
+    \__kernel_msg_error:nnxx { xparse } { arg-after-body }
+      { \@@_environment_or_command: }
+      { \tl_to_str:n {#2} }
     \@@_bad_def:wn
   }
 %    \end{macrocode}
@@ -1981,13 +1985,13 @@
           { \exp_args:No \tl_to_str:n { \use:nn #1 { } } }
           {
             \__kernel_msg_warning:nnxx { xparse } { not-single-char }
-              { \iow_char:N \\ \l_@@_function_tl } { \tl_to_str:n {#1} }
+              { \@@_environment_or_command: } { \tl_to_str:n {#1} }
           }
         \group_end:
       }
       {
         \__kernel_msg_error:nnxx { xparse } { not-single-char }
-          { \iow_char:N \\ \l_@@_function_tl } { \tl_to_str:n {#1} }
+          { \@@_environment_or_command: } { \tl_to_str:n {#1} }
         \@@_bad_def:wn
       }
   }
@@ -2052,7 +2056,7 @@
 \cs_new_protected:Npn \@@_bad_arg_spec:wn #1 \@@_break_point:n #2
   {
     \__kernel_msg_error:nnxx { xparse } { bad-arg-spec }
-      { \iow_char:N \\ \l_@@_function_tl } { \tl_to_str:n {#2} }
+      { \@@_environment_or_command: } { \tl_to_str:n {#2} }
   }
 \cs_new_protected:Npn \@@_bad_def:wn #1 \@@_break_point:n #2 { }
 %    \end{macrocode}
@@ -2100,7 +2104,7 @@
     \bool_if:NT \l_@@_some_obey_spaces_bool
       {
         \__kernel_msg_error:nnxx { xparse } { non-trailing-obey-spaces }
-          { \iow_char:N \\ \l_@@_function_tl } { \tl_to_str:n {#1} }
+          { \@@_environment_or_command: } { \tl_to_str:n {#1} }
         \@@_bad_def:wn
       }
     \tl_clear:N \l_@@_last_delimiters_tl
@@ -3205,7 +3209,7 @@
       { \@@_grab_D_call:Nw #1 }
       {
         \__kernel_msg_error:nnxx { xparse } { missing-required }
-          { \exp_after:wN \token_to_str:N \l_@@_fn_tl }
+          { \@@_environment_or_command: }
           { \token_to_str:N #1 }
         \@@_add_arg:o \c_novalue_tl
       }
@@ -3484,14 +3488,14 @@
       \peek_meaning_remove:NTF \char_generate:nn { \tex_endlinechar:D } { 6 }
       {
         \__kernel_msg_error:nnxxx { xparse } { verbatim-newline }
-          { \exp_after:wN \token_to_str:N \l_@@_fn_tl }
+          { \@@_environment_or_command: }
           { \tl_to_str:N \l_@@_v_arg_tl }
           { \tl_to_str:n {#1} }
         \@@_add_arg:o \c_novalue_tl
       }
       {
         \__kernel_msg_error:nnxxx { xparse } { verbatim-tokenized }
-          { \exp_after:wN \token_to_str:N \l_@@_fn_tl }
+          { \@@_environment_or_command: }
           { \tl_to_str:N \l_@@_v_arg_tl }
           { \tl_to_str:n {#1} }
         \@@_add_arg:o \c_novalue_tl
@@ -3841,8 +3845,10 @@
               \q_nil { } ##2 \ERROR \q_@@ \ERROR
           }
           {
-            \__kernel_msg_expandable_error:nnnn
-              { xparse } { missing-required } {##5} {##2}
+            \__kernel_msg_expandable_error:nnff
+              { xparse } { missing-required }
+              { \exp_args:Nf \tl_trim_spaces:n { \token_to_str:N ##5 } }
+              { \tl_to_str:n {##2} }
             ##4 {#1} \q_@@ ##5 ##6 {##7}
           }
       }
@@ -3877,8 +3883,10 @@
               ##6 \ERROR
           }
           {
-            \__kernel_msg_expandable_error:nnnn
-              { xparse } { missing-required } {##4} {##2}
+            \__kernel_msg_expandable_error:nnff
+              { xparse } { missing-required }
+              { \exp_args:Nf \tl_trim_spaces:n { \token_to_str:N ##4 } }
+              { \tl_to_str:n {##2} }
             ##3 {#1} \q_@@ ##4 ##5 {##6}
           }
       }
@@ -4059,34 +4067,37 @@
 % \subsection{Access to the argument specification}
 %
 % \begin{macro}{\@@_get_arg_spec_error:N, \@@_get_arg_spec_error:n}
+% \begin{macro}{\@@_get_arg_spec_error_aux:n}
 %   Provide an informative error when trying to get the argument
 %   specification of a non-\pkg{xparse} command or environment.
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_get_arg_spec_error:N #1
   {
-    \cs_if_exist:NTF #1
-      {
-        \__kernel_msg_error:nnx { xparse } { non-xparse-command }
-          { \token_to_str:N #1 }
-      }
-      {
-        \__kernel_msg_error:nnx { xparse } { unknown-command }
-          { \token_to_str:N #1 }
-      }
+    \bool_set_false:N \l_@@_environment_bool
+    \tl_set:Nn \l_@@_fn_tl {#1}
+    \@@_get_arg_spec_error_aux:n { \cs_if_exist:NTF #1 }
   }
 \cs_new_protected:Npn \@@_get_arg_spec_error:n #1
   {
-    \cs_if_exist:cTF {#1}
+    \bool_set_true:N \l_@@_environment_bool
+    \str_set:Nx \l_@@_environment_str {#1}
+    \@@_get_arg_spec_error_aux:n
+      { \cs_if_exist:cTF { \l_@@_environment_str } }
+  }
+\cs_new_protected:Npn \@@_get_arg_spec_error_aux:n #1
+  {
+    #1
       {
-        \__kernel_msg_error:nnx { xparse } { non-xparse-environment }
-          { \tl_to_str:n {#1} }
+        \__kernel_msg_error:nnx { xparse } { non-xparse }
+          { \@@_environment_or_command: }
       }
       {
-        \__kernel_msg_error:nnx { xparse } { unknown-environment }
-          { \tl_to_str:n {#1} }
+        \__kernel_msg_error:nnx { xparse } { unknown }
+          { \@@_environment_or_command: }
       }
   }
 %    \end{macrocode}
+% \end{macro}
 % \end{macro}
 %
 % \begin{macro}{\@@_get_arg_spec:NTF}
@@ -4286,19 +4297,38 @@
 %
 % \subsection{Messages}
 %
-% Some messages intended as errors when defining commands/environments.
+% \begin{macro}{\@@_environment_or_command:}
+% \begin{variable}{\c_@@_ignore_def_tl}
+%   Two texts used in several messages.
 %    \begin{macrocode}
+\cs_new:Npn \@@_environment_or_command:
+  {
+    \bool_if:NTF \l_@@_environment_bool
+      { environment ~ ' \l_@@_environment_str ' }
+      {
+        command ~ '
+        \exp_args:Nf \tl_trim_spaces:n
+          { \exp_after:wN \token_to_str:N \l_@@_fn_tl }
+        '
+      }
+  }
 \tl_const:Nn \c_@@_ignore_def_tl
   { \\ \\ LaTeX~will~ignore~this~entire~definition. }
+%    \end{macrocode}
+% \end{variable}
+% \end{macro}
+%
+% Some messages intended as errors when defining commands/environments.
+%    \begin{macrocode}
 \__kernel_msg_new:nnnn { xparse } { arg-after-body }
-  { In~the~definition~of~'#1',~b~(body)~argument~must~be~last. }
+  { In~the~definition~of~#1,~b~(body)~argument~must~be~last. }
   {
     The~'body'~argument~type~is~followed~by~'#2'~in~the~argument~
-    specification~of~'#1'.~This~is~not~allowed.
+    specification~of~the~#1.~This~is~not~allowed.
     \c_@@_ignore_def_tl
   }
 \__kernel_msg_new:nnnn { xparse } { bad-arg-spec }
-  { Bad~argument~specification~'#2'~for~command~'#1'. }
+  { Bad~argument~specification~'#2'~for~#1. }
   {
     The~argument~specification~provided~was~not~valid:~
     one~or~more~mandatory~pieces~of~information~were~missing.
@@ -4349,7 +4379,7 @@
     arguments~after~long~arguments.~You~have~tried~to~mix~the~two~types.
   }
 \__kernel_msg_new:nnnn { xparse } { invalid-command-arg }
-  { Argument~type~'#2'~not~available~for~command~'#1'. }
+  { Argument~type~'#2'~not~available~for~#1. }
   {
     The~letter~'#2'~can~only~be~used~in~environment~argument~
     specifications,~not~for~commands.
@@ -4374,7 +4404,7 @@
     \c_@@_ignore_def_tl
   }
 \__kernel_msg_new:nnnn { xparse } { non-trailing-obey-spaces }
-  { Prefix~'!'~used~before~mandatory~argument~'#2'~of~command~'#1'. }
+  { Prefix~'!'~used~before~mandatory~argument~'#2'~of~#1. }
   {
     The~prefix~'!'~can~only~apply~to~trailing~optional~arguments.
     \c_@@_ignore_def_tl
@@ -4397,7 +4427,7 @@
   }
 \__kernel_msg_new:nnnn { xparse } { not-single-char }
   {
-    Argument~delimiter~'#2'~for~the~command~'#1'~should~be~
+    Argument~delimiter~'#2'~for~the~#1~should~be~
     a~single~character.
   }
   {
@@ -4413,53 +4443,50 @@
     \c_@@_ignore_def_tl
   }
 \__kernel_msg_new:nnnn { xparse } { too-many-arguments }
-  { Too~many~arguments~in~argument~specification~'#2'~of~command~'#1'. }
+  { Too~many~arguments~in~argument~specification~'#2'~of~#1. }
   {
     The~argument~specification~provided~has~more~than~9~arguments.~
     This~cannot~be~implemented.
     \c_@@_ignore_def_tl
   }
 \__kernel_msg_new:nnnn { xparse } { two-markers }
-  { Two~'#2'~apply~to~the~same~argument~in~argument~specification~of~command~'#1'. }
+  { Two~'#2'~apply~to~the~same~argument~in~argument~specification~of~#1. }
   {
     The~argument~specification~provided~has~two~markers~'#2'~applying~
     to~the~same~argument;~these~are~redundant.
   }
 \__kernel_msg_new:nnnn { xparse } { unknown-argument-type }
-  { Unknown~argument~type~'#2'~for~the~command~'#1'. }
+  { Unknown~argument~type~'#2'~for~the~#1. }
   {
     The~letter~'#2'~does~not~specify~a~known~argument~type.
     \c_@@_ignore_def_tl
   }
 %    \end{macrocode}
 %
-% Errors when using commands/environments.
+% Errors when using commands/environments.  The \texttt{if-boolean}
+% message is always used in expandable errors.  The
+% \texttt{loop-in-defaults} and \texttt{missing-required} messages can
+% be expandable or not expandable.
 %    \begin{macrocode}
 \__kernel_msg_new:nnn { xparse } { if-boolean }
   { Invalid~use~\IfBooleanTF {#1} }
 \__kernel_msg_new:nnnn { xparse } { loop-in-defaults }
-  { Circular~dependency~in~defaults~of~'#1'. }
+  { Defaults~of~#1~have~circular~dependency. }
   {
-    The~default~values~of~two~or~more~arguments~of~'#1'~depend~on~each~
-    other~in~a~way~that~cannot~be~resolved.
+    The~default~values~of~two~or~more~arguments~of~the~#1~
+    depend~on~each~other~in~a~way~that~cannot~be~resolved.
   }
 \__kernel_msg_new:nnnn { xparse } { missing-required }
-  { Failed~to~find~required~argument~starting~with~'#2'~for~command~'#1'. }
+  { Missing~required~argument~for~#1. }
   {
-    The~current~command~'#1'~expects~an~argument~starting~with~'#2'.~
+    The~current~#1~expects~an~argument~starting~with~'#2'.~
     LaTeX~did~not~find~it,~and~will~insert~a~default~value~to~be~processed.
   }
-\__kernel_msg_new:nnnn { xparse } { non-xparse-command }
-  { Command~'#1'~not~defined~using~xparse. }
+\__kernel_msg_new:nnnn { xparse } { non-xparse }
+  { \str_upper_case:n #1~not~defined~using~xparse. }
   {
-    You~have~asked~for~the~argument~specification~for~a~command~'#1',~
-    but~this~is~not~a~command~defined~using~xparse.
-  }
-\__kernel_msg_new:nnnn { xparse } { non-xparse-environment }
-  { Environment~'#1'~not~defined~using~xparse. }
-  {
-    You~have~asked~for~the~argument~specification~for~an~environment~'#1',~
-    but~this~is~not~an~environment~defined~using~xparse.
+    You~have~asked~for~the~argument~specification~for~the~#1,~
+    but~this~was~not~defined~using~xparse.
   }
 \__kernel_msg_new:nnnn { xparse } { split-excess-tokens }
   { Too~many~'#1'~tokens~when~trying~to~split~argument. }
@@ -4468,22 +4495,16 @@
     at~each~occurrence~of~the~token~'#1',~up~to~a~maximum~of~#2~parts.~
     There~were~too~many~'#1'~tokens.
   }
-\__kernel_msg_new:nnnn { xparse } { unknown-command }
-  { Unknown~document~command~'#1'. }
+\__kernel_msg_new:nnnn { xparse } { unknown }
+  { Unknown~document~#1. }
   {
-    You~have~asked~for~the~argument~specification~for~a~command~'#1',~
-    but~it~is~not~defined.
-  }
-\__kernel_msg_new:nnnn { xparse } { unknown-environment }
-  { Unknown~document~environment~'#1'. }
-  {
-    You~have~asked~for~the~argument~specification~for~an~environment~'#1',~
+    You~have~asked~for~the~argument~specification~for~the~#1,~
     but~it~is~not~defined.
   }
 \__kernel_msg_new:nnnn { xparse } { verbatim-newline }
-  { Verbatim~argument~of~'#1'~ended~by~end~of~line. }
+  { Verbatim~argument~of~#1~ended~by~end~of~line. }
   {
-    The~verbatim~argument~of~'#1'~cannot~contain~more~than~one~line,~
+    The~verbatim~argument~of~the~#1~cannot~contain~more~than~one~line,~
     but~the~end~
     of~the~current~line~has~been~reached.~You~may~have~forgotten~the~
     closing~delimiter.
@@ -4491,9 +4512,9 @@
     LaTeX~will~ignore~'#2'.
   }
 \__kernel_msg_new:nnnn { xparse } { verbatim-tokenized }
-  { The~verbatim~command~'#1'~cannot~be~used~inside~an~argument. }
+  { The~verbatim~#1~cannot~be~used~inside~an~argument. }
   {
-    The~command~'#1'~takes~a~verbatim~argument.~
+    The~#1~takes~a~verbatim~argument.~
     It~may~not~appear~within~the~argument~of~another~function.~
     It~received~an~illegal~token \tl_if_empty:nF {#3} { ~'#3' } .
     \\ \\
